--- a/error.html
+++ b/error.html
@@ -38,7 +38,7 @@
 <body>
     <div class="container">
 <h1>Error</h1>
-抱歉，出现错误，请<a href="https://ethankent2007.github.io/" style="text-decoration: underline; color: #ffffff;">重试</a>
+抱歉，出现错误，请<a href="/index.html" style="text-decoration: underline; color: #ffffff;">重试</a>
     <footer>
         Copyright &copy 2023-2025 KentStudio. All rights reserved. 
     </footer>
