--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         });
 
         async function copyToClipboard() {
-            const textToCopy = "https://ethankent2007.github.io/";
+            const textToCopy = "https://ethankent2007.github.io/tool.wenxian.search/";
             try {
                 await navigator.clipboard.writeText(textToCopy);
                 alert("已复制本站链接到剪切板！快去分享吧~");
